# elephant

./: .gitignore  .gitmodules  Dockerfile  README.md  __init__.py  __main__.py  build_emapcc.sh  docker-build.sh  docker-run.sh  emap.sh  mem.json  mem.v  mem2.json  mem_1r2w.json  mem_1r2w.v  mem_1r4w.v  mem_functional.json  mem_target.json  nerv.out  out.json  out_rewrite.json  out_rewrite_mux.json  simple_mems.out  test-compiler.sh  test-decompiler.sh  test.out  test.py
abstract-mem/: AbstractMem.py  auto_mapping.py  lowering_tests.py  mem_tech.json  parse_xci.py  pyhplib_sram.py  vivado.jou  vivado_236940.backup.jou  vivado_237089.backup.jou  vivado_237240.backup.jou  vivado_237595.backup.jou  vivadotcl_h16_w43_1r1w.tcl  vivadotcl_h2_w24_1r1w.tcl  vivadotcl_h4_w114_1r1w.tcl  vivadotcl_h512_w8_1r1w.tcl  vivadotcl_h64_w50_1r1w.tcl  vivadotcl_h8_w174_1r1w.tcl
abstract-mem-experiments/: auto_mapping.py  vivado_237436.backup.jou  vivadotcl_h2_w27_1r1w.tcl  vivadotcl_h8_w33_1r1w.tcl
compiler/: AbstractMem.py  auto_mapping.py  parse_xci.py
database/: __init__.py  db.py  formatter.py  rewriter.py  yosys_driver.py
egglog/: README.md  alu-small.egg  alu.egg  alu_mem_tmp114.egg  alu_mem_tmp1634.egg  churchroad-old.egg  churchroad.egg  elephant.egg  mem2.egg  mem3.egg  mux-test.egg  netlist_h4_w4_1r1w_mem_openram_h4_w4_1r1w_wen.egg  run_all_tests-no_images.sh  run_all_tests.sh  test.egg
emap/: __init__.py  __main__.py  db.py  schema.sql
emap/cpp/: CMakeLists.txt
emap/cpp/include/: find_write_ports_by_dffes.h
emap/cpp/src/: emapcc.cpp
lean/: Funmem.lean  Main.lean  (+3 more)
(+515 files in other folders)
